# openoligo-firmware

./: .env  .env.sample  .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  main.py  mypy.ini  protocol_runner.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml  lint.yaml  test.yaml
api/: helpers.py  models.py  server.py
app/: server.py
deploy/: setup.yml
docs/: fixed_keys_dict.html  index.html  instrument.html  log_config.html  seq.html
docs/api/: db.html  helpers.html  index.html  models.html  server.html
docs/container/: index.html
docs/hal/: board.html  devices.html  gpio.html  index.html  instrument.html  pins.html  platform.html  types.html
docs/hil/: board.html  index.html
docs/openoligo/: index.html  instrument.html  log_config.html  seq.html
docs/openoligo/api/: helpers.html  index.html  models.html  server.html
docs/openoligo/container/: cartridge.html  types.html
docs/openoligo/hal/: devices.html  gpio.html  index.html  platform.html  types.html
docs/openoligo/steps/: flow.html  index.html  types.html
docs/openoligo/utils/: sim.html  singleton.html  wait.html
docs/protocols/: dna_synthesis.html  index.html  oligosynthesis.html
docs/scripts/: hil.html  index.html  orchestrator.html  runner.html  server.html
docs/steps/: flow.html  index.html  types.html
docs/utils/: index.html  logger.html  sim.html  wait.html
examples/: board.py  custom_protocol.py  dna_synthesis.py  gpio.py  pinout.py  simple.py
oligocloud/: app.py  package-lock.json  package.json  serverless.yml
openoligo/: __init__.py  fixed_keys_dict.py  instrument.py  log_config.py  main.py  seq.py
openoligo/api/: __init__.py  db.py  helpers.py  models.py  redis.py  server.py
openoligo/container/: cartridge.py  types.py
openoligo/driver/: __init__.py  board.py  devices.py  gpio.py  manifold.py  rpi_pins.py  switch.py  types.py
openoligo/hal/: __init__.py  board.py  devices.py  gpio.py  instrument.py  pins.py  platform.py  types.py
openoligo/hil/: board.py
openoligo/protocols/: __init__.py  dna_synthesis.py  oligosynthesis.py
openoligo/reagents/: named_reagents.py  types.py
openoligo/scripts/: __init__.py  hil.py  orchestrator.py  runner.py  server.py
openoligo/steps/: __init__.py  flow.py  flow_sequence.py  types.py
openoligo/utils/: __init__.py  log_config.py  logger.py  sim.py  singleton.py  wait.py
scratch/: Scratch.md  api_scratchpad.ipynb
scripts/: runner.py  server.py
tests/: conftest.py  test_examples.py  test_instrument.py  test_seq.py
tests/api/: test_helpers.py  test_models.py  test_server.py
tests/container/: cartridge.py  test_cartridge.py
tests/driver/: test_board.py  test_gpio.py  test_manifold.py  test_switch.py
tests/hal/: test_board.py  test_devices.py  test_gpio.py  test_instrument.py  test_platform.py  test_types.py
tests/protocols/: test_dna_synthesis.py  test_oligosynthesis.py
tests/steps/: test_flow.py  test_flow_sequence.py  test_init.py
tests/utils/: test_logger.py  test_sim.py  test_wait.py
