[tool.poetry]
name = "OpenOligo"
version = "0.1.2"
description = "An open-source platform for programmatically interacting with and managing Nucleic acid sequences synthesis processes."
license = "Apache-2.0"
authors = ["Satyam Tiwary <satyam@technoculture.io>"]
readme = "README.md"
keywords = ["DNA", "synthesis", "genetics", "open-source"]

[tool.poetry.scripts]
oligo-server= 'app.server:main'

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
flake8 = "^3.9.2"
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
isort = "^5.12.0"
coverage-badge = "^1.1.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=openoligo --cov-config=pyproject.toml --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["openoligo"]
omit = ["**/types.py"]

[tool.poetry.extras]
rpi = ["RPi.GPIO"]
