[metadata]
license_file = LICENSE

[flake8]
exclude = .git,__pycache__,build,dist
max-line-length = 100

[coverage:run]
source = openoligo
omit = **/types.py

[coverage:report]
fail_under = 90

[tool:pytest]
addopts = --cov=openoligo --cov-config=pyproject.toml --cov-report=term-missing --cov-fail-under=90
